# ai-poc

./: .gitignore  README.md  TODO.md  pyproject.toml
cf-worker-ai/: index.js  package-lock.json  package.json  wrangler.toml
cf-worker-ai/src/: actions.js  index.js  loaders.js  util.js
slack-bolt-app/: .env.example  app.py  pyproject.toml
slack-bolt-app/responses/: message.json  reaction.json  reaction2.json
slack-bolt-app/src/: app.py  lib.py
